[package]
edition = "2021"
name = "async-wasi"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0.2"
futures = { version = "0.3" }
getrandom = "0.2"
libc = "0.2"
path-absolutize = "3.0.13"
serde = { version = "1", features = ["derive"], optional = true }
socket2 = { version = "^0.4.9", features = ["all"] }
tokio = { version = "1", features = ["full"], optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
serde_json = { version = "1" }

[features]
async_tokio = ["tokio"]
default = ["async_tokio", "serialize"]
serialize = ["serde"]
